# Tarefa_comunicacao_serial

./: README.md
display_i2c_serial/: CMakeLists.txt  diagram.json  display_i2c_serial.c  wokwi.toml  ws2812.c  ws2812.h
display_i2c_serial/inc/: font.h  ssd1306.c
display_i2c_serial/mtx/: ws2812.c
